--- a/CSS/master.css
+++ b/CSS/master.css
@@ -16,9 +16,6 @@
     box-sizing: border-box;    
 }
 
-html {
-    /* scroll-behavior: smooth; */
-}
 body {
     font-family: 'Work Sans', sans-serif;
     overflow-x: hidden;
@@ -28,9 +25,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
-    margin-right: auto;
-    /* background-color: red; */
-    
+    margin-right: auto;    
 }
 
 /* // Very Small foldable devices (landscape phones, 300px and up) */
@@ -135,7 +130,6 @@ body {
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-
 }
 
 .header .container .links .icon span {
@@ -143,9 +137,6 @@ body {
     width: 100%;
     background-color: black;
     margin-bottom: 5px;
-
-
-
 }
 
 .header .container .links .icon span:nth-child(2) {
@@ -175,7 +166,6 @@ body {
     position: absolute;
     top: -20px;
     right: 5px;
-
 }
 
 .header .container .links ul li a {
@@ -196,6 +186,17 @@ body {
     padding-left: 25px;
 }
 /* Header Style End. */
+/* progress-bar start */
+.progress-bar {
+    width: 80%;
+    height: 5px;
+    position: sticky;
+    background-color: var(--main-color);
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+}
+/* progress-bar end */
 /* landing Start */
 .landing {
     background-image: url(../images/mountains2.jpg);
@@ -212,7 +213,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.09);
-
 }
 
 .landing .innerText {
@@ -369,7 +369,6 @@ body {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
     background-color: var(--section-background);
-
 }
 
 .portfolio .container .project-container{
@@ -377,7 +376,6 @@ body {
     grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
     gap: 30px;
     margin-top: 80px;
-
 }
 
 @media (max-width: 300px) {
@@ -395,16 +393,13 @@ body {
 }
 .portfolio .container .project-container .project .project-text{
     padding: 20px;
-
 }
 .portfolio .container .project-container .project .project-text h3{
     margin: 0;
-
 }
 .portfolio .container .project-container .project .project-text p{
     color: var(--paragraph-color);
     line-height: var(--line-height);
-
 }
 /* portfolio End */
 /* start About */
@@ -445,12 +440,9 @@ body {
     margin-bottom: 40px;
 }
 
-
-
 .about .container .about-content .image{
     width: 25%;
     position: relative;
-
 }
 
 @media (max-width: 767px) { 
